# MeltyLib

./: .gitignore  CMakeLists.txt  README.md
Cheat Engine/: Character.CSX  ComboInfo.CSX  MBAA.CT  Menu.CSX
src/: Action.h  Address.h  AddressesAndStuff.h  CPauseMenu_NormalElement.h  Character.cpp  Character.h  ComboInfo.cpp  ComboInfo.h  DrawUtils.cpp  DrawUtils.h  Font.cpp  Font.h  MeltyLib.h  Menu.cpp  Menu.h  Stage.h  TextureManager.cpp  TextureManager.h  Vector2.h
tests/: main.cpp
